<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CoinsListFragment">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chpg_coins_list_currency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:checkedChip="@id/chp_coins_list_usd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chp_coins_list_usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_text_usd"
            app:chipEndPadding="16dp"
            app:chipStartPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chp_coins_list_eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_text_eur"
            app:chipEndPadding="16dp"
            app:chipStartPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chp_coins_list_rub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_text_rub"
            app:chipEndPadding="16dp"
            app:chipStartPadding="16dp" />

    </com.google.android.material.chip.ChipGroup>

    <ProgressBar
        android:id="@+id/pb_coins_list_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_coins_list_coins"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chpg_coins_list_currency" />

</androidx.constraintlayout.widget.ConstraintLayout>